# WhatsTable

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  whatstable.py
