[project]
name = "whatstable"
version = "0.1.0"
description = "A Python tool to parse exported WhatsApp chat data(txt file/zip file) and transform it into a clean structured table(csv file) ready for analysis."
authors = [
    {name = "GRIITTYY",email = "iammomohsamuel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
